删除线上服务专员入职日期校验

--- a/WebContent/data_access/human_store_fwzy_edit.html
+++ b/WebContent/data_access/human_store_fwzy_edit.html
@@ -286,11 +286,11 @@ Date.prototype.format=function(fmt) {
 		
 		//校验入职日期 格式 
 		//var a = /^(\d{4})-(\d{2})-(\d{2})$/
-		var result = topostdate.match(/^(\d{1,4})(-|\/)(\d{1,2})\2(\d{1,2})$/);
+		/* var result = topostdate.match(/^(\d{1,4})(-|\/)(\d{1,2})\2(\d{1,2})$/);
 		 if (result == null){
 			$$.showMessage("系统信息","入职日期格式不正确!请重新选择！");
 			return; 
-		} 
+		}  */
 		
 		
 		/*
