优化频道查询

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -222,10 +222,10 @@
 			  <!-- Tabs within a box -->
 			  <ul class="nav nav-tabs no-border">
 <!-- 				<li class="active"><a href="#revenue-chart" data-toggle="tab">实时</a></li> -->
-				<li class="active"><a href="#sales-chart" data-toggle="tab" onclick="javascript:chartresize1()">时</a></li>
+				<li><a href="#sales-chart" data-toggle="tab" onclick="javascript:chartresize1()">时</a></li>
                 <li><a href="#day-chart" data-toggle="tab" onclick="javascript:chartresize2()">日</a></li>
 				<li><a href="#week-chart" data-toggle="tab" onclick="javascript:chartresize4()">周</a></li>
-                <li><a href="#month-chart" data-toggle="tab" onclick="javascript:chartresize3()">月</a></li>
+                <li  class="active"><a href="#month-chart" data-toggle="tab" onclick="javascript:chartresize3()">月</a></li>
                 <div class="col-sm-1 pull-right"><button type="button" id="search-btn-add" class="btn btn-block btn-sm" style="margin-right: 50px; font-size: 14px; background-color: rgba(0,0,0,0.1);color: #fff">加入对比</button></div>
 			  </ul>
 			  <div class="tab-content no-padding" id="tab-content">
@@ -233,7 +233,7 @@
 <!-- 				<div class="chart tab-pane active" id="revenue-chart"> -->
 <!-- 				  <div id="main1" style="width: 100%; height: 300px;"></div> -->
 <!-- 				</div> -->
-				<div class="chart tab-pane active" id="sales-chart">
+				<div class="chart tab-pane" id="sales-chart">
 				  <div id="main4" style="width: 100%; height: 411px;"></div>
 				</div>
                 <div class="chart tab-pane" id="day-chart">
@@ -242,7 +242,7 @@
 				<div class="chart tab-pane" id="week-chart">
 				  <div id="main7" style="width: 100%; height: 411px;"></div>
 				</div>
-                <div class="chart tab-pane" id="month-chart">
+                <div class="chart tab-pane active" id="month-chart">
                   <div id="main6" style="width: 100%; height: 411px;"></div>
                 </div>
 			  </div>
