--- a/WebContent/notice/notice_send.html
+++ b/WebContent/notice/notice_send.html
@@ -86,8 +86,8 @@
 	
 	function showAlt(tag){
 		if(tag=="sms"){
-			layer.tips('手机短信', '#sms_img', {
-				  tips: [1, '#f7c539'], //还可配置颜色
+			layer.tips('手机短信,稍后开放！！！', '#sms_img', {
+				  tips: [1, '#b6bcc1'], //还可配置颜色
 				  time: 2000
 				});
 		}else if(tag=="app"){
@@ -430,7 +430,7 @@ function showTemplateInfo(t){
 	}
 	
 	var releaseUnit = $("#releaseUnit").val();
-	if(releaseUnit==""){
+	if(releaseUnit.replace(/^\s+|\s+$/g, '')==""){
 		$$.showMessage('提示',"发布单位不能为空!");
 		return;
 	}
@@ -586,7 +586,7 @@ function showNoticeWay(){
                         <tr>
                             <td style="width:12%">通知方式<span style="color:red"></span></td>
                             <td>
-                               <div id="notice_way" style="height:35px"><img id="sms_img" onmouseover="showAlt('sms')"  src="img/sms.png" height="35" alt="手机短信"/>&nbsp;&nbsp;<img id="app_img" src="img/gasj.png" onmouseover="showAlt('app')" height="35" alt="国安数据APP"/>&nbsp;&nbsp;<img id="mini_img" src="img/mini.png" onmouseover="showAlt('mini_APP')" height="35" alt="国安数据微信小程序"/></div>
+                               <div id="notice_way" style="height:35px"><img id="sms_img" onmouseover="showAlt('sms')"  src="img/sms_invalid.png" height="35" alt="手机短信"/>&nbsp;&nbsp;<img id="app_img" src="img/gasj.png" onmouseover="showAlt('app')" height="35" alt="国安数据APP"/>&nbsp;&nbsp;<img id="mini_img" src="img/mini.png" onmouseover="showAlt('mini_APP')" height="35" alt="国安数据微信小程序"/></div>
                             </td>
                         </tr>
                          <tr>
