--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -395,7 +395,7 @@
       </div>
       <div class="col-sm-3 no-padding">
         <div id="main4" style="width: 100%;height:300px;"></div>
-        <div class="gengduo" id="businessDep_gmv_more""><a>更多</a></div>
+        <div class="gengduo" id="businessDep_gmv_more"><a>更多</a></div>
         <div id="main8" style="width: 100%;height:300px;" style="margin-top: 10px;"></div>
       </div>
       <div class="gengduo" id="channel_gmv_more" style="top:305px;"><a>更多</a></div>
@@ -404,7 +404,6 @@
   </div>
   <!-- /.content-wrapper -->
 
-</div>
 <!-- ./wrapper -->
 <div class="control-sidebar-bg" id="control-sidebar-bg"></div>
 
