--- a/WebContent/demo/current_shopkeeper_demo.html
+++ b/WebContent/demo/current_shopkeeper_demo.html
@@ -2197,7 +2197,7 @@ function initStoreHistoryGMV(){
   //跳转到emoloyeeInfo.html
   function newEmployeeInfoHtml(t){
 	  var employeeNo =   $(t).attr("id").split("_")[1];
-	  var URL="employeeInfo.html?"+"employee_no="+encode64(employeeNo)+"&flag=0"+"&#tab_1";
+	  var URL="user_demo.html?"+"employee_no="+encode64(employeeNo)+"&flag=0"+"&#tab_1";
 	  window.open(URL); 
   }
   
