--- a/WebContent/demo/current_shopkeeper_demo.html
+++ b/WebContent/demo/current_shopkeeper_demo.html
@@ -2267,12 +2267,12 @@ function initStoreHistoryGMV(){
   
   //返回省市
   function gopro(){
-	  window.location.href="index_headquarters.html?p="+proId_ecode+"&c="+cityId_ecode+"&cn="+encode64(cityName_ecode)+"&zm="+zm+"&fs="+encode64(targets);
+	  window.location.href="index_headquarters_demo.html?p="+proId_ecode+"&c="+cityId_ecode+"&cn="+encode64(cityName_ecode)+"&zm="+zm+"&fs="+encode64(targets);
   }
   
   //返回全国
   function goCountry(){
-	  window.location.href="index_headquarters.html?fs="+encode64(targets);
+	  window.location.href="index_headquarters_demo.html?fs="+encode64(targets);
   }
   
   
