提交demo总部首页的页面-隐藏掉数据模型下面子菜单

--- a/WebContent/demo/index_headquarters_demo.html
+++ b/WebContent/demo/index_headquarters_demo.html
@@ -126,23 +126,23 @@
                         </li>
                         <li>
                             <em>数据模型<i class="glyphicon glyphicon-triangle-bottom"></i></em>
-                             <div class="TDsec-nav">
+                             <!-- <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="col-sm-4">
                                         <dt><i></i>社区模型</dt>
                                         <dd><a href="javascript:toToBaseDataModule()"><span class="fa fa-sitemap"></span>基础数据模型</a></dd>
                                     </dl>
-                                    <!-- <dl class="col-sm-4">
+                                    <dl class="col-sm-4">
                                         <dt><i></i>订单模型</dt>
                                         <dd><a href="javascript:goToPublicOrder()"><span class="fa fa-server"></span>公海订单</a></dd>
                                         <dd><a href="javascript:goToAbnormalOrder()"><span class="fa fa-warning "></span>异常订单</a></dd>
-                                    </dl> -->
+                                    </dl>
                                     <dl class="col-sm-4" id="user_model">
                                         <dt><i></i>用户模型</dt>
                                         <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
                                     </dl> 
                                 </div>
-                            </div>
+                            </div> -->
                         </li>
                         <li>
                             <em>数据地图<i class="glyphicon glyphicon-triangle-bottom"></i></em>
