提交demo总部首页的页面-修改菜单和刷新为2秒

--- a/WebContent/demo/index_headquarters_demo.html
+++ b/WebContent/demo/index_headquarters_demo.html
@@ -79,9 +79,9 @@
              <div class="pull-left">
 		          <div class="logo-lg">
 		            <ul class="no-margin">
-                        <li class="current">
+<!--                         <li class="current">
                             <em>数据运营<i class="glyphicon glyphicon-triangle-bottom"></i></em>
-<!--                             <div class="TDsec-nav">
+                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="pull-left">
                                         <dt><i></i>运营数据</dt>
@@ -122,13 +122,13 @@
                                         <dd><a href="javascript:searchRank(7)"><span class="fa fa-gears"></span>频道排名</a></dd>
                                     </dl>
                                 </div>
-                            </div> -->
-                        </li>
-                        <li>
+                            </div> 
+                        </li> -->
+                        <li class="current">
                             <em>数据模型<i class="glyphicon glyphicon-triangle-bottom"></i></em>
-                             <!-- <div class="TDsec-nav">
+                             <div class="TDsec-nav">
                                 <div class="secNav-box">
-                                    <dl class="col-sm-4">
+                                   <!--  <dl class="col-sm-4">
                                         <dt><i></i>社区模型</dt>
                                         <dd><a href="javascript:toToBaseDataModule()"><span class="fa fa-sitemap"></span>基础数据模型</a></dd>
                                     </dl>
@@ -136,13 +136,13 @@
                                         <dt><i></i>订单模型</dt>
                                         <dd><a href="javascript:goToPublicOrder()"><span class="fa fa-server"></span>公海订单</a></dd>
                                         <dd><a href="javascript:goToAbnormalOrder()"><span class="fa fa-warning "></span>异常订单</a></dd>
-                                    </dl>
+                                    </dl> -->
                                     <dl class="col-sm-4" id="user_model">
                                         <dt><i></i>用户模型</dt>
                                         <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
                                     </dl> 
                                 </div>
-                            </div> -->
+                            </div>
                         </li>
                         <li>
                             <em>数据地图<i class="glyphicon glyphicon-triangle-bottom"></i></em>
@@ -173,9 +173,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
+<!--                         <li>
                             <em>数据分析<i class="glyphicon glyphicon-triangle-bottom"></i></em>
-<!--                             <div class="TDsec-nav">
+                             <div class="TDsec-nav">
                                 <div class="secNav-box">
                                     <dl class="col-sm-3">
                                         <dt><i></i>分析图</dt>
@@ -184,8 +184,8 @@
 										<dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd>
                                     </dl>
                                 </div>
-                            </div> -->
-                        </li>
+                            </div>
+                        </li> -->
                     </ul>
                 </div>
                 </div>
