提交demo总部首页的页面-修改菜单和刷新为2秒

--- a/WebContent/demo/index_headquarters_demo.html
+++ b/WebContent/demo/index_headquarters_demo.html
@@ -140,6 +140,7 @@
                                     <dl class="col-sm-4" id="user_model">
                                         <dt><i></i>用户模型</dt>
                                         <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
+                                        <dd class="logo-prohibit"><a href="#"><span class="fa fa-group"></span>家庭画像</a></dd>
                                     </dl> 
                                 </div>
                             </div>
