注释掉电话

--- a/WebContent/demo/user_demo.html
+++ b/WebContent/demo/user_demo.html
@@ -375,7 +375,7 @@ function initStore(){
 							$(".text-yellow").html(empname);
 							$("#employee_no").html(human_info.human.employee_no);
 							$("#remark").html(human_info.human.remark);
-							$("#phone").html(human_info.human.phone);
+							//$("#phone").html(human_info.human.phone);
 							$("#storename").html(human_info.human.storename);
 						}
 		},false);
